--- a/Code Salfeet/About Us.html
+++ b/Code Salfeet/About Us.html
@@ -1,209 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>fast charge</title>
+	<title>About us</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" href="css/bootstrap.css">
-
-		<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
+	<!--===============================================================================================-->
+	<link rel="stylesheet" href="css/About us.css">
+	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Themify Icons-->
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<style>
+		.container-login100 {
+			width: 100%;
+			min-height: 50vh;
+			display: -webkit-box;
+			display: -webkit-flex;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			padding: 15px;
+			/* background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0); */
+			background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
+			background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
+			/* background: linear-gradient(-135deg, #c850c0, #4158d0); */
+		}
 
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		.About {
+			margin: 70px;
+			color: #ffffff;
+			/* font-size: 29px; */
+			font-size: 40px;
+			/* margin: 0; */
+			padding: 0px;
+			text-transform: uppercase;
+			font-weight: bold;
+			/* margin-top: -5px; */
+		}
 
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style1.css">
+		.fast {
+			margin: 20px;
+			font-weight: bold;
+			font-size: 50px;
+			color: #000000;
+		}
 
-	<link rel="stylesheet" href="css/welcome.css">
+		.row2 {
+			background: #ffffff;
+			height: 900px;
+			margin: 0 auto;
+			max-width: 1256px;
+		}
 
+		ul,
+		ol {
+			margin-top: 0;
+			margin-bottom: 10px;
+			/* float: right; */
+			margin: 0px;
+			padding: 0;
+			color: #000000;
+			font-size: 20px;
+			margin-left: 10px;
+		}
 
-<style>
+		p {
+			margin: 0 0 10px;
+			font-size: 20px;
+			color: #000000;
+			margin-left: 10px;
+		}
 
-.container-login100 {
-    width: 100%;
-    min-height: 50vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    /* background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0); */
-    background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
-    background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-    /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
-}
-.About {
-    margin: 70px;
-    color: #ffffff;
-    /* font-size: 29px; */
-    font-size: 40px;
-    /* margin: 0; */
-    padding: 0px;
-    text-transform: uppercase;
-    font-weight: bold;
-    /* margin-top: -5px; */
-}
-.fast {
-    margin: 20px;
-    font-weight: bold;
-    font-size: 50px;
-    color: #000000;
-}
-.row2 {
-    background: #ffffff;
-    height: 900px;
-    margin: 0 auto;
-    max-width: 1256px;
-}
-ul, ol {
-    margin-top: 0;
-    margin-bottom: 10px;
-    /* float: right; */
-    margin: 0px;
-    padding: 0;
-    color: #000000;
-    font-size: 20px;
-    margin-left: 10px;
-}
-p {
-    margin: 0 0 10px;
-    font-size: 20px;
-    color: #000000;
-    margin-left: 10px;
-}
-.c{
- font-size: 20px;
-    color: #000000;
+		.c {
+			font-size: 20px;
+			color: #000000;
 
-}
-.c1{
- font-size: 20px;
-    color: #000000;
+		}
 
-}
-</style>
+		.c1 {
+			font-size: 20px;
+			color: #000000;
+
+		}
+	</style>
 
 </head>
+
 <body>
 
 	<div id="page">
 
-	<div class="page-inner">
-		<div class="container-login100">
-			<nav class="gtco-nav" role="navigation">
-				<div class="gtco-container">
+		<div class="page-inner">
+			<div class="container-login100">
+				<nav class="gtco-nav" role="navigation">
+					<div class="gtco-container">
 
-					<div class="row">
-						<div class="col-sm-4 col-xs-12">
-							<div id="gtco-logo"><a href="index.html">Fast charge </a></div>
-						</div>
-						<div class="col-xs-8 text-right menu-1">
+						<div class="row">
+							<div class="col-sm-4 col-xs-12">
+								<div id="gtco-logo"><a href="index.html">Fast Charge </a></div>
+							</div>
+							<div class="col-xs-8 text-right menu-1">
 
-							<ul>
-							<a href="#"><li class="btn-cta"><a href="sign in.html"><span>Sign in</span></a></li>
-							<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
-								</li>
-								<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
-								<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
-								<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
-							</ul>
-						</div>
-
-						<div class="About">
-
-
-						About Us
-
-
-
-
+								<ul>
+									<a href="#">
+										<li class="btn-cta"><a href="sign in.html"><span>Sign in</span></a></li>
+										<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
+										</li>
+										<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
+										<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
+										<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
+								</ul>
+							</div>
+							<div class="About">About Us</div>
 						</div>
 
+				</nav>
+			</div>
+		</div>
+
+		<div class="row2">
+			<center class="fast"><big>Fast Charge</big></center>
+
+			<p class="pp">
 
 
-					</div>
+				<center class="c"><big>Programming Monsters :</big><br></center>
+				<ol> The importance of the site:<br><br>
+					<li> 1- Save time and effort
+					<li> 2- Reduce the theft of the pharaoh
+					<li> 3- After payment center for some houses
+					<li> 4- solve the problem of the elderly and people with special needs
+						 
+				</ol>
+				<br>
+				<p class="pp">
+					  Payment method is either Visa
+					Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.
+					Or advance payment, through the wallet that is stored on site<br>
 
+
+					 <center class="c1"> Members of the group<br>
+						<center>
+
+							shahed dawoud<br>
+							Waheeb abu atallah<br>
+							Rani sabra<br>
+							Layth abu salah<br>
+							Sameh alhaj<br>
+
+
+
+
+							  </p>
+			</p>
+
+			<body>
+
+
+
+		</div>
+
+
+
+
+
+
+
+
+
+
+		<div class="foter">
+			<div class="row copyright">
+				<div class="col-md-12">
+					<p class="pull-left">
+						<small class="block">&copy; All rights reserved*_*</small>
+						<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+					</p>
+					<p class="pull-right">
+						<ul class="gtco-social-icons pull-right">
+							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-linkedin"></i></a></li>
+							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
+						</ul>
+					</p>
 				</div>
-			</nav>
+			</div>
+
+
 
 		</div>
 
-	</div>
-
-
-
-
-
-<div class="row2">
-
-
-	<center class="fast"><big >fast charge</big></center>
-
-	<p class="pp">
-
-
-<center class="c"><big>Programming Monsters :</big><br></center>
-<ol>  The importance of the site:<br><br>
-<li> 1- Save time and effort
-<li> 2- Reduce the theft of the pharaoh
-<li> 3- After payment center for some houses
-<li> 4- solve the problem of the elderly and people with special needs
- </ol>
-<br>
-<p class="pp">
-  Payment method is either Visa
-Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.
-Or advance payment, through the wallet that is stored on site<br>
-
-
- <center class="c1"> Members of the group<br><center>
-
-shahed dawoud<br>
-Waheeb abu atallah<br>
-Rani sabra<br>
-Layth abu salah<br>
-Sameh alhaj<br>
-
-
-
-
-  </p>
-</p>
- <body>
-
-
-
-</div>
 
 
 
@@ -213,68 +216,27 @@ Sameh alhaj<br>
 
 
 
-
-
-<div class="foter">
-	<div class="row copyright">
-		<div class="col-md-12">
-			<p class="pull-left">
-				<small class="block">&copy; All rights reserved*_*</small>
-				<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
-			</p>
-			<p class="pull-right">
-				<ul class="gtco-social-icons pull-right">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-				</ul>
-			</p>
+		<div class="gototop js-top">
+			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 		</div>
-	</div>
 
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
-
-<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
-		$('.js-tilt').tilt({
-			scale: 1.1
-		})
-	</script>
-<!--===============================================================================================-->
-	<script src="js/main.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/bootstrap/js/popper.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/select2/select2.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/tilt/tilt.jquery.min.js"></script>
+		<script>
+			$('.js-tilt').tilt({
+				scale: 1.1
+			})
+		</script>
+		<!--===============================================================================================-->
+		<script src="js/main.js"></script>
 
 </body>
+
 </html>
