--- a/Code Salfeet/index.html
+++ b/Code Salfeet/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>fast charge</title>
+	<title>Fast Charge</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="fast, water, Electricity, Charge, fast charge, الشحن السريع" />
-	<meta name="author" content="FreeHTML5.co" />
 
 
 
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -52,256 +51,263 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<div class="gtco-loader"></div>
 
 	<div id="page">
 
 
-	<div class="page-inner">
-		<nav class="gtco-nav" role="navigation">
-			<div class="gtco-container">
+		<div class="page-inner">
+			<nav class="gtco-nav" role="navigation">
+				<div class="gtco-container">
 
-				<div class="row">
-					<div class="col-sm-4 col-xs-12">
-						<div id="gtco-logo"><a href="index.html">Fast charge </a></div>
-					</div>
-					<div class="col-xs-8 text-right menu-1">
-						<ul>
-						<li class="btn-cta"><a href="Sign in.html"><span>Sign in</span></a></li>
-						<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
-							</li>
+					<div class="row">
+						<div class="col-sm-4 col-xs-12">
+							<div id="gtco-logo"><a href="index.html">Fast charge </a></div>
+						</div>
+						<div class="col-xs-8 text-right menu-1">
+							<ul>
+								<li class="btn-cta"><a href="Sign in.html"><span>Sign in</span></a></li>
+								<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
+								</li>
 								<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
-							<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
-							<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
-						</ul>
+								<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
+								<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
+							</ul>
+						</div>
 					</div>
+
 				</div>
+			</nav>
 
-			</div>
-		</nav>
+			<!-- <header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(images/10.jpg)">
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.unsplash.com/photo-1513518647365-91830a8800b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80)">
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.unsplash.com/photo-1493402702251-a6e5320337f7?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80)">
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_electricity_light_121592_1920x1080.jpg)">-->
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_finger_hand_light_current_63293_1920x1080.jpg)">
+				<div class="overlay"></div>
+				<div class="gtco-container">
+					<div class="row">
+						<div class="col-md-12 col-md-offset-0 text-left">
 
-	<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(images/10.jpg)">
-		<div class="overlay"></div>
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left">
 
+							<div class="row row-mt-15em">
+								<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
+									<span class="intro-text-small">Welcome to Website Fast charge</span>
+									<h1>
+										<center>You can easily charge electricity or water meters through our website</center>
+									</h1>
+								</div>
+			</header>
 
-					<div class="row row-mt-15em">
-						<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
-							<span class="intro-text-small">Welcome to Website Fast charge</span>
-							<h1><center>You can easily charge electricity or water meters through our website</center> </h1>
+			<div class="gtco-section border-bottom">
+				<div class="gtco-container">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<h2>Miscellaneous Articles</h2>
+							<p>Articles on water and electricity</p>
 						</div>
-	</header>
-
-       <div class="gtco-section border-bottom">
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Miscellaneous Articles</h2>
-					<p>Articles on water and electricity</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/1.jpg" class="fh5co-project-item image-popup">
-					<a href="https://mawdoo3.com/%D9%81%D9%88%D8%A7%D8%A6%D8%AF_%D8%A7%D9%84%D9%85%D8%A7%D8%A1" target="-black">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/1.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Benefits of Water </h2>
-							<!--<p>Benefits of Water </p>-->
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/2.jpg" class="fh5co-project-item image-popup">
-					<a href="https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%8A_%D8%A7%D9%84%D9%83%D9%87%D8%B1%D8%A8%D8%A7%D8%A1"target="-black">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/2.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>What is electricity? </h2>
-							<!--<p>What is electricity?</p>-->
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/3.jpg" class="fh5co-project-item image-popup">
-					<a href="https://mawdoo3.com/%D9%83%D9%8A%D9%81_%D9%8A%D9%85%D9%83%D9%86_%D8%A3%D9%86_%D9%86%D9%88%D9%81%D8%B1_%D9%81%D9%8A_%D8%A7%D9%84%D9%85%D8%A7%D8%A1"target="-black">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/3.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>How to save water </h2>
-						<!--<p>What is electricity?</p>-->
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/4.jpg" class="fh5co-project-item image-popup">
-					<a href="https://youtu.be/FhyoBjKN5gM"target="-black">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/4.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>How LEDs Work</h2>
-							<!--<p>What is electricity?</p>-->
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/5.jpg" class="fh5co-project-item image-popup">
-					<a href="https://mawdoo3.com/%D9%85%D8%A7_%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D8%A1_%D9%81%D9%8A_%D8%AD%D9%8A%D8%A7%D8%AA%D9%86%D8%A7"target="-black">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/5.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2> the importance of water</h2>
-						<!--<p>What is electricity?</p>-->
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/6.jpg" class="fh5co-project-item image-popup">
-					<a href="https://mawdoo3.com/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%83%D9%87%D8%B1%D8%A8%D8%A7%D8%A1_%D9%81%D9%8A_%D8%AD%D9%8A%D8%A7%D8%AA%D9%86%D8%A7_%D8%A7%D9%84%D9%8A%D9%88%D9%85%D9%8A%D8%A9"target="-black">
-
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/6.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>The importance of electricity</h2>
-							<!--<p>What is electricity?</p>-->
-						</div>
-					</a>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-
-
-	<div id="gtco-products">
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Ads</h2>
-					<!-- <p>Some pictures of the projects for water and electricity projects</p> -->
-				</div>
-			</div>
-			<div class="row">
-				<div class="owl-carousel owl-carousel-carousel">
-					<div class="item">
-						<a href="#"><img src="images/1.jpg" alt="image" ></a>
 					</div>
-					<div class="item">
-						<a href="#"><img src="images/2.jpg" alt="image"></a>
-					</div>
-					<div class="item">
-						<a href="#"><img src="images/3.jpg" alt="image"></a>
-					</div>
-					<div class="item">
-						<a href="#"><img src="images/4.jpg" alt="image"></a>
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/1.jpg" class="fh5co-project-item image-popup">
+								<a href="https://mawdoo3.com/%D9%81%D9%88%D8%A7%D8%A6%D8%AF_%D8%A7%D9%84%D9%85%D8%A7%D8%A1" target="-black">
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/1.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2>Benefits of Water </h2>
+										<!--<p>Benefits of Water </p>-->
+									</div>
+								</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/2.jpg" class="fh5co-project-item image-popup">
+								<a href="https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%8A_%D8%A7%D9%84%D9%83%D9%87%D8%B1%D8%A8%D8%A7%D8%A1" target="-black">
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/2.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2>What is electricity? </h2>
+										<!--<p>What is electricity?</p>-->
+									</div>
+								</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/3.jpg" class="fh5co-project-item image-popup">
+								<a href="https://mawdoo3.com/%D9%83%D9%8A%D9%81_%D9%8A%D9%85%D9%83%D9%86_%D8%A3%D9%86_%D9%86%D9%88%D9%81%D8%B1_%D9%81%D9%8A_%D8%A7%D9%84%D9%85%D8%A7%D8%A1" target="-black">
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/3.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2>How to save water </h2>
+										<!--<p>What is electricity?</p>-->
+									</div>
+								</a>
+						</div>
+
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/4.jpg" class="fh5co-project-item image-popup">
+								<a href="https://youtu.be/FhyoBjKN5gM" target="-black">
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/4.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2>How LEDs Work</h2>
+										<!--<p>What is electricity?</p>-->
+									</div>
+								</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/5.jpg" class="fh5co-project-item image-popup">
+								<a href="https://mawdoo3.com/%D9%85%D8%A7_%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D8%A1_%D9%81%D9%8A_%D8%AD%D9%8A%D8%A7%D8%AA%D9%86%D8%A7" target="-black">
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/5.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2> the importance of water</h2>
+										<!--<p>What is electricity?</p>-->
+									</div>
+								</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="images/6.jpg" class="fh5co-project-item image-popup">
+								<a href="https://mawdoo3.com/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%83%D9%87%D8%B1%D8%A8%D8%A7%D8%A1_%D9%81%D9%8A_%D8%AD%D9%8A%D8%A7%D8%AA%D9%86%D8%A7_%D8%A7%D9%84%D9%8A%D9%88%D9%85%D9%8A%D8%A9" target="-black">
+
+									<figure>
+										<div class="overlay"><i class="ti-plus"></i></div>
+										<img src="images/6.jpg" alt="Image" class="img-responsive">
+									</figure>
+									<div class="fh5co-text">
+										<h2>The importance of electricity</h2>
+										<!--<p>What is electricity?</p>-->
+									</div>
+								</a>
+						</div>
+
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 
 
 
-	<div id="gtco-subscribe">
-		<div class="gtco-container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Subscribe</h2>
-					<p>Subscribe to receive all new</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<form class="form-inline">
-						<div class="col-md-6 col-sm-6">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Put your email here">
+			<div id="gtco-products">
+				<div class="gtco-container">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<h2>Ads</h2>
+							<!-- <p>Some pictures of the projects for water and electricity projects</p> -->
+						</div>
+					</div>
+					<div class="row">
+						<div class="owl-carousel owl-carousel-carousel">
+							<div class="item">
+								<a href="#"><img src="images/1.jpg" alt="image"></a>
+							</div>
+							<div class="item">
+								<a href="#"><img src="images/2.jpg" alt="image"></a>
+							</div>
+							<div class="item">
+								<a href="#"><img src="images/3.jpg" alt="image"></a>
+							</div>
+							<div class="item">
+								<a href="#"><img src="images/4.jpg" alt="image"></a>
 							</div>
 						</div>
-						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
+					</div>
+				</div>
+			</div>
+
+
+
+			<div id="gtco-subscribe">
+				<div class="gtco-container">
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<h2>Subscribe</h2>
+							<p>Subscribe to receive all new</p>
 						</div>
-					</form>
+					</div>
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2">
+							<form class="form-inline">
+								<div class="col-md-6 col-sm-6">
+									<div class="form-group">
+										<label for="email" class="sr-only">Email</label>
+										<input type="email" class="form-control" id="email" placeholder="Put your email here">
+									</div>
+								</div>
+								<div class="col-md-6 col-sm-6">
+									<button type="submit" class="btn btn-default btn-block">Subscribe</button>
+								</div>
+							</form>
+						</div>
+					</div>
 				</div>
 			</div>
+			<footer id="gtco-footer" role="contentinfo">
+				<div class="gtco-container">
+					<div class="row row-p	b-md">
+
+						<div class="col-md-4">
+							<div class="gtco-widget">
+								<h3>About<span class="footer-logo"> fast charge</h3>
+								<p></p>
+							</div>
+						</div>
+
+						<div class="col-md-4 col-md-push-1">
+							<div class="gtco-widget">
+								<h3>Links</h3>
+								<ul class="gtco-footer-links">
+									<li><a href="#">Terms of services</a></li>
+									<li><a href="#">Privacy Policy</a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="gtco-widget">
+								<h3>Connect with us</h3>
+								<ul class="gtco-quick-contact">
+									<li><a href="#"><i class="icon-phone"></i> (رقم)+1 234 567 890</a></li>
+									<li><a href="#"><i class="icon-mail2"></i> fastchargecontact@gmail.com</a></li>
+									<li><a href="https://m.me/188175428474514"><i class="icon-chat"></i> Contact with Messenger</a></li>
+								</ul>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="row copyright">
+						<div class="col-md-12">
+							<p class="pull-left">
+								<small class="block">&copy; All rights reserved Fast Charge</small>
+								<!-- <small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>  -->
+							</p>
+							<p class="pull-right">
+								<ul class="gtco-social-icons pull-right">
+									<li><a href="#"><i class="icon-twitter"></i></a></li>
+									<li><a href="#"><i class="icon-facebook"></i></a></li>
+									<li><a href="#"><i class="icon-linkedin"></i></a></li>
+									<li><a href="#"><i class="icon-dribbble"></i></a></li>
+									<li><a href="#"><i class="icon-instagram"></i></a></li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</footer>
 		</div>
-	</div>
-	<footer id="gtco-footer" role="contentinfo">
-		<div class="gtco-container">
-			<div class="row row-p	b-md">
-
-				<div class="col-md-4">
-					<div class="gtco-widget">
-						<h3>About<span class="footer-logo"> fast charge</h3>
-						<p></p>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-md-push-1">
-					<div class="gtco-widget">
-						<h3>Links</h3>
-						<ul class="gtco-footer-links">
-							<li><a href="#">Terms of services</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="gtco-widget">
-						<h3>Connect with us</h3>
-						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> (رقم)+1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> fastchargecontact@gmail.com</a></li>
-							<li><a href="https://m.me/188175428474514"><i class="icon-chat"></i> Contact with Messenger</a></li>
-						</ul>
-					</div>
-				</div>
-
-			</div>
-
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; All rights reserved Fast Charge</small>
-						<!-- <small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>  -->
-					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-
-		</div>
-	</footer>
-	</div>
 
 	</div>
 
@@ -327,5 +333,6 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
