--- a/Code Salfeet/index.html
+++ b/Code Salfeet/index.html
@@ -86,8 +86,9 @@
 			<!-- <header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(images/10.jpg)">
 			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.unsplash.com/photo-1513518647365-91830a8800b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80)">
 			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.unsplash.com/photo-1493402702251-a6e5320337f7?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80)">
-			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_electricity_light_121592_1920x1080.jpg)">-->
-			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_finger_hand_light_current_63293_1920x1080.jpg)">
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_electricity_light_121592_1920x1080.jpg)">
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_finger_hand_light_current_63293_1920x1080.jpg)">-->
+			<header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(https://images.wallpaperscraft.com/image/lamp_hand_drops_124301_1920x1080.jpg); height: 610px;">
 				<div class="overlay"></div>
 				<div class="gtco-container">
 					<div class="row">
