--- a/Code Salfeet/About Us.html
+++ b/Code Salfeet/About Us.html
@@ -23,23 +23,6 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 
 	<style>
-		.container-login100 {
-			width: 100%;
-			min-height: 50vh;
-			display: -webkit-box;
-			display: -webkit-flex;
-			display: -moz-box;
-			display: -ms-flexbox;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			align-items: center;
-			padding: 15px;
-			/* background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0); */
-			background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
-			background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-			/* background: linear-gradient(-135deg, #c850c0, #4158d0); */
-		}
 
 		.About {
 			margin: 70px;
@@ -139,7 +122,7 @@
 			<p class="pp">
 
 
-				<center class="c"><big>Programming Monsters :</big><br></center>
+				<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
 				<ol> The importance of the site:<br><br>
 					<li> 1- Save time and effort
 					<li> 2- Reduce the theft of the pharaoh
@@ -206,6 +189,8 @@
 
 
 		</div>
+	</div>
+	</div>
 
 
 
@@ -216,26 +201,26 @@
 
 
 
-		<div class="gototop js-top">
-			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-		</div>
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
 
-		<!--===============================================================================================-->
-		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-		<!--===============================================================================================-->
-		<script src="vendor/bootstrap/js/popper.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		<!--===============================================================================================-->
-		<script src="vendor/select2/select2.min.js"></script>
-		<!--===============================================================================================-->
-		<script src="vendor/tilt/tilt.jquery.min.js"></script>
-		<script>
-			$('.js-tilt').tilt({
-				scale: 1.1
-			})
-		</script>
-		<!--===============================================================================================-->
-		<script src="js/main.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script>
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script>
+	<!--===============================================================================================-->
+	<script src="js/main.js"></script>
 
 </body>
 
