--- a/Code Salfeet/About Us.html
+++ b/Code Salfeet/About Us.html
@@ -14,28 +14,11 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/About us.css">
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/icomoon.css">
 
 	<style>
-
-		.About {
-			margin: 70px;
-			color: #ffffff;
-			/* font-size: 29px; */
-			font-size: 40px;
-			/* margin: 0; */
-			padding: 0px;
-			text-transform: uppercase;
-			font-weight: bold;
-			/* margin-top: -5px; */
-		}
-
 		.fast {
 			margin: 20px;
 			font-weight: bold;
@@ -43,12 +26,6 @@
 			color: #000000;
 		}
 
-		.row2 {
-			background: #ffffff;
-			height: 900px;
-			margin: 0 auto;
-			max-width: 1256px;
-		}
 
 		ul,
 		ol {
@@ -95,133 +72,108 @@
 
 						<div class="row">
 							<div class="col-sm-4 col-xs-12">
-								<div id="gtco-logo"><a href="index.html">Fast Charge </a></div>
+								<div id="gtco-logo"><a href="index.html">Fast charge </a></div>
 							</div>
 							<div class="col-xs-8 text-right menu-1">
-
 								<ul>
-									<a href="#">
-										<li class="btn-cta"><a href="sign in.html"><span>Sign in</span></a></li>
-										<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
-										</li>
-										<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
-										<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
-										<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
+									<li class="btn-cta"><a href="Sign in.html"><span>Sign in</span></a></li>
+									<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
+									</li>
+									<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
+									<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
+									<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
 								</ul>
 							</div>
-							<div class="About">About Us</div>
 						</div>
 
+					</div>
 				</nav>
 			</div>
 		</div>
+		<section class="s2">
+			<div class="row2">
+				<center class="fast"><big>Fast Charge</big></center>
 
-		<div class="row2">
-			<center class="fast"><big>Fast Charge</big></center>
-
-			<p class="pp">
-
-
-				<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
-				<ol> The importance of the site:<br><br>
-					<li> 1- Save time and effort
-					<li> 2- Reduce the theft of the pharaoh
-					<li> 3- After payment center for some houses
-					<li> 4- solve the problem of the elderly and people with special needs
-						 
-				</ol>
-				<br>
 				<p class="pp">
-					  Payment method is either Visa
-					Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.
-					Or advance payment, through the wallet that is stored on site<br>
 
+					<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
+					<ol>
+						<h4>The importance of the site:</h4>
+						<li> 1- Save time and effort </li>
+						<li> 2- Reduce the theft of the pharaoh </li>
+						<li> 3- After payment center for some houses </li>
+						<li> 4- solve the problem of the elderly and people with special needs </li>
+						 
+					</ol>
+					<br>
+					<p class="pp">
+						 <p> Payment method is either Visa
+							Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.
+							Or advance payment, through the wallet that is stored on site</p>
+						<br>
 
-					 <center class="c1"> Members of the group<br>
-						<center>
-
+						 <center class="c1">
+							<h4> Members of the group </h4>
 							shahed dawoud<br>
 							Waheeb abu atallah<br>
 							Rani sabra<br>
 							Layth abu salah<br>
 							Sameh alhaj<br>
-
-
-
-
-							  </p>
-			</p>
-
-			<body>
-
-
-
-		</div>
-
-
-
-
-
-
-
-
-
-
-		<div class="foter">
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; All rights reserved*_*</small>
-						<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+						</center>
 					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</p>
-				</div>
+				</p>
 			</div>
+		</section>
+
+			<footer class="foter">
+					<div class="col-md-12">
+						<p class="pull-left">
+							<small class="block">&copy; All rights reserved*_*</small>
+							<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+						</p>
+						<p class="pull-right">
+							<ul class="gtco-social-icons pull-right">
+								<li><a href="#"><i class="icon-twitter"></i></a></li>
+								<li><a href="#"><i class="icon-facebook"></i></a></li>
+								<li><a href="#"><i class="icon-linkedin"></i></a></li>
+								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#"><i class="icon-instagram"></i></a></li>
+							</ul>
+						</p>
+					</div>
 
 
 
+			</footer>
+
+
+
+
+
+
+
+
+
+
+		<div class="gototop js-top">
+			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 		</div>
-	</div>
-	</div>
+		<!--===============================================================================================-->
+		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/bootstrap/js/popper.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/select2/select2.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/tilt/tilt.jquery.min.js"></script>
+		<script>
+			$('.js-tilt').tilt({
+				scale: 1.1
+			})
+		</script>
+		<!--===============================================================================================-->
+		<script src="js/main.js"></script>
 
-
-
-
-
-
-
-
-
-
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
-
-	<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script>
-		$('.js-tilt').tilt({
-			scale: 1.1
-		})
-	</script>
-	<!--===============================================================================================-->
-	<script src="js/main.js"></script>
-
-</body>
 
 </html>
