--- a/Code Salfeet/SignUp.html
+++ b/Code Salfeet/SignUp.html
@@ -216,7 +216,7 @@ a {
 		<li></li>
 		<li></li>
 	</ul>
-	<footer id="gtco-footer" role="contentinfo">
+	<footer id="gtco-footer" role="contentinfo"  style="height: 410px;">
 		<div class="gtco-container">
 			<div class="row row-p	b-md">
 
