--- a/Code Salfeet/welcome.html
+++ b/Code Salfeet/welcome.html
@@ -26,6 +26,47 @@
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Theme style  -->
+
+		<style>
+			.fast {
+				margin: 20px;
+				font-weight: bold;
+				font-size: 50px;
+				color: #000000;
+			}
+
+
+			ul,
+			ol {
+				margin-top: 0;
+				margin-bottom: 10px;
+				/* float: right; */
+				margin: 0px;
+				padding: 0;
+				color: #000000;
+				font-size: 20px;
+				margin-left: 10px;
+			}
+
+			p {
+				margin: 0 0 10px;
+				font-size: 20px;
+				color: #000000;
+				margin-left: 10px;
+			}
+
+			.c {
+				font-size: 20px;
+				color: #000000;
+
+			}
+
+			.c1 {
+				font-size: 20px;
+				color: #000000;
+
+			}
+		</style>
 </head>
 
 <body>
@@ -234,8 +275,7 @@
 
 
 	</form>
-	<div class="foter">
-		<div class="row copyright">
+	<footer class="foter">
 			<div class="col-md-12">
 				<p class="pull-left">
 					<small class="block">&copy; All rights reserved*_*</small>
@@ -251,15 +291,14 @@
 					</ul>
 				</p>
 			</div>
-		</div>
 
 
 
-	</div>
+	</footer>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-
+</body>
 	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<!--===============================================================================================-->
@@ -277,6 +316,6 @@
 	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
-</body>
+
 
 </html>
