--- a/Code Salfeet/Contact.html
+++ b/Code Salfeet/Contact.html
@@ -127,7 +127,7 @@
 		<li></li>
 		<li></li>
 	</ul>
-	<footer id="gtco-footer" role="contentinfo">
+	<footer id="gtco-footer" role="contentinfo" style="height: 410px;">
 		<div class="gtco-container">
 			<div class="row row-p	b-md">
 
