--- a/Code Salfeet/index.html
+++ b/Code Salfeet/index.html
@@ -254,7 +254,7 @@
 					</div>
 				</div>
 			</div>
-			<footer id="gtco-footer" role="contentinfo">
+			<footer id="gtco-footer" role="contentinfo" style="height: 410px;">
 				<div class="gtco-container">
 					<div class="row row-p	b-md">
 
