--- a/Code Salfeet/About Us.html
+++ b/Code Salfeet/About Us.html
@@ -18,46 +18,6 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/icomoon.css">
 
-	<style>
-		.fast {
-			margin: 20px;
-			font-weight: bold;
-			font-size: 50px;
-			color: #000000;
-		}
-
-
-		ul,
-		ol {
-			margin-top: 0;
-			margin-bottom: 10px;
-			/* float: right; */
-			margin: 0px;
-			padding: 0;
-			color: #000000;
-			font-size: 20px;
-			margin-left: 10px;
-		}
-
-		p {
-			margin: 0 0 10px;
-			font-size: 20px;
-			color: #000000;
-			margin-left: 10px;
-		}
-
-		.c {
-			font-size: 20px;
-			color: #000000;
-
-		}
-
-		.c1 {
-			font-size: 20px;
-			color: #000000;
-
-		}
-	</style>
 
 </head>
 
@@ -98,7 +58,7 @@
 
 					<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
 					<ol>
-						<h4>The importance of the site:</h4>
+						<li><h4>The importance of the site:</h4></li>
 						<li> 1- Save time and effort </li>
 						<li> 2- Reduce the theft of the pharaoh </li>
 						<li> 3- After payment center for some houses </li>
@@ -113,16 +73,17 @@
 						<br>
 
 						 <center class="c1">
-							<h4> Members of the group </h4>
-							shahed dawoud<br>
-							Waheeb abu atallah<br>
-							Rani sabra<br>
-							Layth abu salah<br>
-							Sameh alhaj<br>
+							<h2> Members of the group </h2>
+							<p>shahed dawoud</p><br>
+							<p>Waheeb abu atallah</p><br>
+							<p>Rani sabra</p><br>
+							<p>Layth abu salah</p><br>
+							<p>Sameh alhaj</p><br>
 						</center>
 					</p>
 				</p>
 			</div>
+
 		</section>
 
 			<footer class="foter">
@@ -142,22 +103,11 @@
 						</p>
 					</div>
 
-
-
 			</footer>
-
-
-
-
-
-
-
-
-
-
 		<div class="gototop js-top">
 			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 		</div>
+
 		<!--===============================================================================================-->
 		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 		<!--===============================================================================================-->
